Change primary color

--- a/src/global.css
+++ b/src/global.css
@@ -13,3 +13,16 @@
 .studentCard:hover {
     transform: scale(1.01);
 }
+
+.primaryButton{
+    background-color: #2C5282;
+    color: #fff ;
+    border: 1px solid #2C5282;
+       
+}
+
+.primaryButton:hover{
+
+    background-color: transparent;
+    color: #2C5282;    
+}
