--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,11 @@
 * {
     font-family: "Ubuntu", "system-ui";
     box-sizing: border-box;
+    transition: all 0.2s linear;
+    /* Scroll bar */
+    ::-webkit-scrollbar {
+        width: 3px;
+    }
 }
 
 .hoverIcon,
