--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
 * {
     font-family: "Ubuntu", "system-ui";
     box-sizing: border-box;
+    scroll-behavior: smooth;
     transition: all 0.2s linear;
     /* Scroll bar */
     ::-webkit-scrollbar {
