Complete company profile

--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,15 @@
     }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Ubuntu", "system-ui";
+}
+
 .hoverIcon:hover {
     transform: scale(1.1);
 }
